<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Yoga 2 Sharpness Fix</string>
    <string name="action_settings">Settings</string>
    <string name="feature_preferences">Features</string>
    <string name="start_based_preferences">Startup</string>
    <string name="title_switchCABC_preference">Switch off sharpen filter and CABC</string>
    <string name="summary_switchCABC_preference">requires ROOT, may decrease battery life</string>
    <string name="title_switchPFIT_preference">Switch off blur filter (KitKat only)</string>
    <string name="summary_switchPFIT_preference">May apply only after display on/off cycle</string>
    <string name="title_check_display_on_preference">Apply filter settings when display is switched on</string>
    <string name="summary_check_display_on_preference">The filters will be reset to default after display off</string>
    <string name="title_check_start_boot_preference">Start on boot</string>
    <string name="summary_check_start_boot_preference">Filter setting may apply only after first display on/off cycle</string>
</resources>
